--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -260,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xdt-fJ-TV1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-823.20000000000005" y="84.107946026986511"/>
+            <point key="canvasLocation" x="-410" y="9"/>
         </scene>
         <!--Account Settings Controller-->
         <scene sceneID="15F-v9-K4l">
@@ -991,6 +991,14 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBu-5U-Laj">
+                                <rect key="frame" x="313" y="564" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="loginPay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zrt-oB-U3I"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -1004,8 +1012,10 @@
                     <navigationItem key="navigationItem" id="6Sj-Qq-VP4"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="loginPay" destination="EBu-5U-Laj" id="2hh-Ec-4W3"/>
                         <outlet property="shopBag" destination="Cba-8J-aZA" id="AvC-cY-yRb"/>
                         <outlet property="tableView" destination="poi-48-03i" id="fJl-O5-Npz"/>
+                        <segue destination="Myv-fe-aFt" kind="show" identifier="loginFromBag" id="lT1-Rs-81Y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -1102,7 +1112,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="vBV-Yx-8FH"/>
+        <segue reference="1Va-5w-8AP"/>
         <segue reference="112-bZ-kHi"/>
-        <segue reference="4Dj-RX-4Mj"/>
+        <segue reference="nmb-tX-66Q"/>
     </inferredMetricsTieBreakers>
 </document>
