--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -811,7 +811,7 @@
             </objects>
             <point key="canvasLocation" x="-1274" y="-725"/>
         </scene>
-        <!--Home Table View Controller-->
+        <!--Shoestore-->
         <scene sceneID="rLR-WD-ouc">
             <objects>
                 <tableViewController id="PH8-g2-wyZ" customClass="HomeTableViewController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
@@ -927,7 +927,7 @@
                             <outlet property="delegate" destination="PH8-g2-wyZ" id="1Eq-mK-pmx"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="adR-HN-vu8"/>
+                    <navigationItem key="navigationItem" title="Shoestore" id="adR-HN-vu8"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tabla" destination="Kzb-O2-Oqh" id="eQI-Xh-7mf"/>
@@ -946,7 +946,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="143" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="poi-48-03i">
-                                <rect key="frame" x="0.0" y="64" width="375" height="462"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="365"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellShop" rowHeight="143" id="33Y-RK-eTn" customClass="ShopCellTableViewCell" customModule="Shoestore" customModuleProvider="target">
@@ -1024,10 +1024,32 @@
                                     <action selector="loginPay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SbI-IW-LRx"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Plb-6x-sOo">
+                                <rect key="frame" x="16" y="455" width="38" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P1o-pg-auR">
+                                <rect key="frame" x="317" y="455" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GVf-MN-Dc2">
+                                <rect key="frame" x="16" y="562" width="56" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Pedidos"/>
+                                <connections>
+                                    <action selector="showPedidos:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ep8-D7-mSJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="poi-48-03i" secondAttribute="bottom" constant="92" id="4Ta-96-boY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="poi-48-03i" secondAttribute="bottom" constant="189" id="4Ta-96-boY"/>
                             <constraint firstItem="poi-48-03i" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Am6-9z-nsf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="poi-48-03i" secondAttribute="trailing" id="Vlo-ih-4aq"/>
                             <constraint firstItem="poi-48-03i" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zaE-o8-PUS"/>
@@ -1038,14 +1060,16 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="loginPay" destination="fpE-VT-OPe" id="A3P-gy-Vg2"/>
+                        <outlet property="pedidosRealizados" destination="GVf-MN-Dc2" id="QLo-FD-nwV"/>
                         <outlet property="shopBag" destination="Cba-8J-aZA" id="AvC-cY-yRb"/>
                         <outlet property="tableView" destination="poi-48-03i" id="fJl-O5-Npz"/>
+                        <outlet property="total" destination="P1o-pg-auR" id="yrC-Cx-CWn"/>
                         <segue destination="Myv-fe-aFt" kind="show" identifier="loginSegue" id="Mbe-Cw-4UV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2940" y="-231"/>
+            <point key="canvasLocation" x="-2940" y="-231.63418290854574"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pUr-Gk-8sD">
